<resources>
    <string name="app_name">Dumi</string>
    <string name="dumi_version">2.4.0</string>
    <string name="beranda">Beranda</string>
    <string name="inbox">Inbox</string>
    <string name="mitra">Mitra</string>
    <string name="bantuan">Bantuan</string>
    <string name="akun">Akun</string>
    <string name="total_saldo">Total Saldo</string>
    <string name="rp_1000000">Rp 1.000.000</string>
    <string name="tampilkan_lebih_sedikit">Tampilkan Lebih Sedikit</string>
    <string name="pay_later">Pay Later</string>
    <string name="saldo_deposit">Saldo Deposit</string>
    <string name="top_up">Top Up</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_antar_bank">Biaya Transfer Antar Bank</string>
    <string name="history">History</string>
    <string name="pembelian_topup"><![CDATA[Pembelian & Top Up]]></string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="isi_pulsa">Isi Pulsa</string>
    <string name="token_pln">Token</string>
    <string name="gopay">Gopay</string>
    <string name="ovo">OVO</string>
    <string name="hotel">Hotel</string>
    <string name="pesawat">Pesawat</string>
    <string name="kereta">Kereta</string>
    <string name="bus_travel">Bus</string>
    <string name="pinjaman_multiguna">Pinjaman Multiguna</string>
    <string name="dumi_kilat">DUMI Kilat</string>
    <string name="nilai_pinjaman">Nilai Pinjaman</string>
    <string name="rp_1jt_15jt">Rp 1.000.000 – 15.000.000</string>
    <string name="tenor">Tenor</string>
    <string name="tenor_bulan">Tenor (Bulan)</string>
    <string name="ajukan">Ajukan</string>
    <string name="ajukan_sekarang">Ajukan Sekarang</string>
    <string name="dumi_regular">DUMI Regular</string>
    <string name="rp_16jt_50jt">Rp 16.000.000 – 50.000.000</string>
    <string name="tenor_bulan_regular">12, 18, 24, 36 bulan</string>
    <string name="dumi_icon">DUMI Icon</string>
    <string name="semua_kategori">Semua Kategori</string>
    <string name="internet">Internet</string>
    <string name="emoney">E-Money</string>
    <string name="bri">Brizzi</string>
    <string name="tap_cash">Tap Cash</string>
    <string name="link_aja">LinkAja</string>
    <string name="dana">DANA</string>
    <string name="grab_pay">GrabPay</string>
    <string name="voucher_game">Voucher Game</string>
    <string name="pdam">PDAM</string>
    <string name="bpjs">BPJS</string>
    <string name="telkom">Telkom</string>
    <string name="gas_pgn">Gas PGN</string>
    <string name="pascabayar">Pascabayar</string>
    <string name="kredivo">Kredivo</string>
    <string name="home_credit">Home Credit</string>
    <string name="tagihan_cc">Tagihan CC</string>
    <string name="tv_kabel">TV Kabel</string>
    <string name="travel">Travel</string>
    <string name="pelni">PELNI</string>
    <string name="ferry">Ferry</string>
    <string name="tagihan_bulanan">Tagihan Bulanan</string>
    <string name="pinjaman_kilat">Pinjaman Kilat</string>
    <string name="tentukan_pinjaman">Tentukan Jumlah Pinjaman</string>
    <string name="maksimal_15jt">Maksimal Rp 15.000.000</string>
    <string name="rp_10jt">Rp1.000.000</string>
    <string name="lama_pembayaran">Lama Pembayaran (Bulan)</string>
    <string name="bulan_3">3</string>
    <string name="bulan_6">6</string>
    <string name="bulan_12">12</string>
    <string name="angsuran_perbulan">Angsuran Perbulan</string>
    <string name="biaya_administrasi">Biaya Administrasi</string>
    <string name="biaya_asuransi">Biaya Asuransi</string>
    <string name="jumlah_yang_diterima">Jumlah yang diterima</string>
    <string name="pinjaman_regular">Pinjaman Regular</string>
    <string name="todo">TODO</string>
    <string name="mulai_16jt_50jt">Mulai Rp 16.000.000 s/d Rp 50.000.000</string>
    <string name="rp_16jt">Rp16.000.000</string>
    <string name="bulan_18">18</string>
    <string name="bulan_24">24</string>
    <string name="bulan_30">30</string>
    <string name="bulan_36">36</string>
    <string name="saldo_pay_later">Saldo Pay Later</string>
    <string name="riwayat">Riwayat</string>
    <string name="dumi_kilat_deskripsi">Maksimal 15 juta rupiah dengan tenor maksimal 12 bulan. Bunga flat 9.9% per tahun.</string>
    <string name="dumi_regular_deskripsi">Maksimal 50 juta rupiah dengan tenor maksimal 36 bulan. Bunga flat 9.9% per tahun.</string>
    <string name="rp_1jt">Rp1.000.000</string>
    <string name="biaya_asuransi_regular">Biaya Asuransi</string>
    <string name="pinjaman">Pinjaman</string>
    <string name="daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="nip_instansi">NIP Instansi</string>
    <string name="masukkan_nip">Masukkan NIP</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password (Min 6 Karakter)</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="lanjut">Lanjut</string>
    <string name="masuk">Masuk</string>
    <string name="daftarkan_diri_anda">Daftarkan diri Anda untuk menjadi Sobat Dumi</string>
    <string name="lihat_password">Lihat Password</string>
    <string name="syarat_dan_ketentuan">Saya menyetujui segala syarat dan ketentuan</string>
    <string name="password">Masukkan Password</string>
    <string name="selamat_datang">Selamat datang kembali!</string>
    <string name="masukan_no_telp">Masukkan Nomor Telp (081xxxxx)</string>
    <string name="masukan_kode">Masukkan Kode Verifikasi</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="kirim_otp">Kirim OTP</string>
    <string name="mohon_menunggu">Mohon Menunggu</string>
    <string name="keluar">Keluar</string>
    <string name="masukan_nama">Masukkan Nama</string>
    <string name="cek_nip">Cek Data Anda</string>
    <string name="nip_baru">NIP:</string>
    <string name="mohon_cek_data">Mohon Cek Data Anda</string>
    <string name="nama">Nama:</string>
    <string name="golongan">Golongan:</string>
    <string name="nama_jabatan">Nama Jabatan:</string>
    <string name="tmtCpns">tmtCpns:</string>
    <string name="mk_bulan">Masa Kerja (Bulan):</string>
    <string name="mk_tahun">Masa Kerja (Tahun):</string>
    <string name="inskerNama">inskerNama:</string>
    <string name="tempat_lahir">Tempat dan tanggal lahir:</string>
    <string name="tglLahirPns">Tanggal Lahir:</string>
    <string name="no_ktp">Nomor KTP</string>
    <string name="tmt_pensiun">tmtPensiun:</string>
    <string name="gaji_pokok">Gaji Pokok:</string>
    <string name="jenis_kelamin">Jenis Kelamin:</string>
    <string name="nama_singkat">Nama Singkat:</string>
    <string name="nama_ktp">Nama (Sesuai KTP)</string>
    <string name="title">Title</string>
    <string name="ket_title">Keterangan Title</string>
    <string name="no_telp">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="sts_rumah">Status Rumah</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kampung">Kampung</string>
    <string name="kota">Kota</string>
    <string name="dati">Dati (Seperti nama Kota/Desa) OPTIONAL</string>
    <string name="propinsi">Propinsi</string>
    <string name="bidang_usaha">Bidang Usaha</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="agama">Agama</string>
    <string name="mohon_lengkapi_data">Mohon Lengkapi Data Anda</string>
    <string name="email">Email</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="foto_selfi">Foto Selfi</string>
    <string name="konfirmasi_nomor_telp">Konfirmasi Nomor Telepon</string>
    <string name="kirim_ulang_kode">Kirim Ulang Kode</string>
    <string name="belum_punya_akun">Belum punya akun? daftar disini</string>
    <string name="rp_0">Rp0</string>
    <string name="sisa_tagihan">Sisa Tagihan</string>
    <string name="bunga">Bunga</string>
    <string name="asuransi">Asuransi</string>
    <string name="administrasi">Administrasi</string>
    <string name="rincian_akun">Rincian Akun</string>
    <string name="ubah_sandi">Ubah Sandi</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="dumi_pensiun">DUMI Pensiun</string>
    <string name="dumi_pensiun_des">Pinjaman di hari tu untuk memudahkan hari anda</string>
    <string name="test">Test</string>
    <string name="dumi_bumn">DUMI BUMN</string>
    <string name="dumi_bumn_des">Pinjaman dana sampai Rp50.000.00 untuk pegawai BUMN</string>
    <string name="logout">Logout</string>
    <string name="cek_daftar_harga">Cek Daftar Harga Pulsa</string>
    <string name="instansi_kerja">Instansi Kerja</string>
    <string name="gelar">Gelar</string>
    <string name="ket_gelar">Keterangan Gelar</string>
    <string name="status_rumah">Status Rumah</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="data_pekerjaan">Data Pekerjaan</string>
    <string name="data_keluarga">Data Keluarga</string>
    <string name="status_kawin">Status Kawin</string>
    <string name="status_hubungan">Status Hubungan</string>
    <string name="nama_penanggung">Nama Penanggung (Sesuai KTP)</string>
    <string name="no_ktp_penanggung">No. KTP Penanggung</string>
    <string name="no_telp_penanggung">No. Telp Penanggung</string>
    <string name="jumlah_tanggungan">Jumlah Tanggungan</string>
    <string name="nama_ibu">Nama Gadis Ibu Kandung</string>
    <string name="status_hubungan_penjamin">Status Hubungan Penanggung</string>
    <string name="format_tgl_lahir">(TahunBulanTanggal) contoh: 19990101</string>
    <string name="tujuan_pinjaman">Tujuan Pinjaman</string>
    <string name="data_transfer">Data Transfer</string>
    <string name="nam_bank">Nama Bank</string>
    <string name="bank">Contoh : MANDIRI</string>
    <string name="no_rek">Nomor Rekening</string>
    <string name="norekcontoh">Contoh 23412xxxxx</string>
    <string name="nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="daftar_sebagai">Daftar Sebagai</string>
    <string name="asn_aktif">ASN Aktif</string>
    <string name="pegawai_bumn">Pegawai BUMN</string>
    <string name="pensiun_asn">Pensiunan ASN</string>
    <string name="sudah_punya_akun">Sudah punya akun? Masuk di sini</string>
    <string name="pinjam_dumi">Pinjam DUMI</string>
    <string name="one">01.</string>
    <string name="apa_itu_dumi">Apa Itu DUMI?</string>
    <string name="arrow_down">arrow down</string>
    <string name="bisa_kami_bantu">Halo, ada yang bisa kami bantu?</string>
    <string name="two">02.</string>
    <string name="siapa_saja_yang_dapat">Siapa saja yang dapat menggunakannya?</string>
    <string name="three">03.</string>
    <string name="bagaimana">Bagaimana cara kerjanya?</string>
    <string name="four">04.</string>
    <string name="cara_jadi_mitra">Bagaimana cara menjadi mitra?</string>
    <string name="five">05.</string>
    <string name="proses_pinjaman">Berapa lama proses pencairan pinjaman?</string>
    <string name="tutup">Tutup</string>
    <string name="total">Rp5,500</string>
    <string name="harga">Harga</string>
    <string name="tgl">Selasa, 05 Mei 2020</string>
    <string name="namaPelanggan">Nama</string>
    <string name="gagal">Gagal!</string>
    <string name="koneksiGagal">Koneksi terputus!! Mohon periksa Wifi/Data anda.</string>
    <string name="jumlah_tagihan">Jumlah Tagihan</string>
    <string name="bulan_tagihan">Bulan Tagihan</string>
    <string name="admin">Admin</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="tunggakan">Tunggakan</string>
    <string name="riwayat_pinjaman">Riwayat Pinjaman</string>
    <string name="bulan">Bulan</string>
</resources>