<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="@dimen/_5sdp"
    android:paddingEnd="@dimen/_5sdp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rlBgPinTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/layout_rounded"
        android:visibility="visible">
        <ImageView
            android:id="@+id/ivStrip"
            android:src="@drawable/layout_rounded_strip_card"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/tenor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivStrip"
            android:layout_alignParentStart="true"
            android:text="@string/tenor"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tvJangkaWaktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tenor"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="top"
            android:text="@string/bulan_12"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tvBulan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_alignTop="@id/tvJangkaWaktu"
            android:layout_toEndOf="@id/tvJangkaWaktu"
            android:text="@string/bulan"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/jumlah"
            android:text="@string/pinjaman"
            android:layout_below="@id/tvJangkaWaktu"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/grey_500"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvMinimalPinjaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvJangkaWaktu"
            android:layout_below="@id/jumlah"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="top"
            android:text="@string/rp_1jt"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </RelativeLayout>

</LinearLayout>