<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg_rounded_corner"
    android:id="@+id/bottom_sheet_"
    app:behavior_hideable="true"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    app:behavior_peekHeight="@dimen/_100sdp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/bTutup"
        android:text="@string/tutup"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="#E91E63"
        android:layout_gravity="end"
        android:textAllCaps="false"
        android:background="@drawable/button_custom_2"
        android:textSize="@dimen/_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rlGagal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivGagal"
            android:src="@drawable/fail"
            android:layout_alignParentTop="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:contentDescription="@string/gagal" />

        <TextView
            android:id="@+id/tvGagal"
            android:text="@string/koneksiGagal"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:layout_below="@id/ivGagal"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/rlBerhasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvNamaPel"
            android:text="@string/namaPelanggan"
            android:textSize="@dimen/_15ssp"
            android:layout_alignParentTop="true"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvNomorPel"
            android:text="@string/nama"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_below="@id/tvNamaPel"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvProdukDetail"
            android:text="@string/namaPelanggan"
            android:textSize="@dimen/_12ssp"
            android:layout_below="@id/tvNomorPel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvProdukDetail"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/jmlTagihan"
            android:text="@string/jumlah_tagihan"
            android:layout_below="@id/view"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvJmlTagihan"
            android:layout_toEndOf="@id/jmlTagihan"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/jmlTagihan"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/blnTagihan"
            android:text="@string/bulan_tagihan"
            android:layout_below="@id/jmlTagihan"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvBlnTagihan"
            android:layout_toEndOf="@id/blnTagihan"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/blnTagihan"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tunggakan"
            android:text="@string/tunggakan"
            android:layout_below="@id/blnTagihan"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvTunggakan"
            android:layout_toEndOf="@id/tunggakan"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/tunggakan"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
        android:id="@+id/admin"
        android:text="@string/admin"
        android:layout_below="@id/tunggakan"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentStart="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvAdmin"
            android:layout_toEndOf="@id/admin"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/admin"
            android:gravity="end"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/total"
            android:text="@string/total_tagihan"
            android:layout_below="@id/admin"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvTotal"
            android:layout_toEndOf="@id/total"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/total"
            android:gravity="end"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>