<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="@dimen/_50sdp"
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                android:src="@drawable/login_bg" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/selamat_datang"
                android:textColor="@color/grey_title"
                android:textStyle="bold"
                android:textSize="@dimen/_20ssp" />

            <EditText
                android:id="@+id/masuk_nip_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textSize="@dimen/_12ssp"
                android:autofillHints=""
                android:backgroundTint="@color/darkBlue"
                android:hint="@string/masukkan_nip"
                android:inputType="number" />

            <EditText
                android:id="@+id/masuk_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:backgroundTint="@color/darkBlue"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/masuk_user_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_design_login_register"
                android:fontFamily="sans-serif-medium"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/daftar_disini_tv"
                android:textColor="@color/darkBlue"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/belum_punya_akun"
                android:textSize="@dimen/_10ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>