<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/grey_100"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/harga"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13ssp"
                android:text="@string/rp_16jt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/harga"
                    android:textSize="@dimen/_9ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/totalHarga"
                    android:text="@string/total"
                    android:textSize="@dimen/_10ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>