<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingTop="@dimen/_15sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iconRiwayatIv"
        android:src="@drawable/pln_logo"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"/>

    <TextView
        android:id="@+id/tipeTv"
        android:text="@string/token_pln"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_alignTop="@id/iconRiwayatIv"
        android:layout_toEndOf="@id/iconRiwayatIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/hargaTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp_1jt"
        android:textColor="@color/black"
        android:layout_below="@id/waktuTv"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noTokenTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp_1jt"
        android:textColor="@color/darkBlue"
        android:layout_below="@id/tipeTv"
        android:layout_alignStart="@id/tipeTv"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/waktuTv"
        android:text="@string/tgl"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_alignTop="@id/iconRiwayatIv"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap" />

    <View
        android:layout_below="@id/iconRiwayatIv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_500" />

</RelativeLayout>